--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task Tracker App</title>
+    <style>
+        body {
+          align-items: center;
+          background-image: url("/images/background.jpg");
+          box-sizing: border-box;
+          display: flex;
+          max-height: 100vh;
+          justify-content: center;
+          max-width: 100vw;
+          > * {
+            align-items: center;
+            height: 90vh;
+            display: flex;
+            width: 90%;
+          }
+        }
+    </style>
   </head>
   <body>
     <div id="root"></div>
